--- a/developer/Unit06/Unit06.csproj
+++ b/developer/Unit06/Unit06.csproj
@@ -4,10 +4,14 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Unit06</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <NullableReferenceTypes>true</NullableReferenceTypes>
+
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="raylib-cs" Version="3.7.0.1" />
+    <PackageReference Include="Raylib-cs" Version="4.0.0.1" />
   </ItemGroup>
 
 </Project>
